
[package]
name = "hl-md-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
axum = "0.7"
hyper = "1"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
